--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/editText_clave"
+        android:id="@+id/editText_clavelog"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
@@ -38,9 +38,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="88dp"
         android:text="Login"
-        app:layout_constraintEnd_toEndOf="@+id/editText_clave"
-        app:layout_constraintStart_toStartOf="@+id/editText_clave"
-        app:layout_constraintTop_toBottomOf="@+id/editText_clave" />
+        app:layout_constraintEnd_toEndOf="@+id/editText_clavelog"
+        app:layout_constraintStart_toStartOf="@+id/editText_clavelog"
+        app:layout_constraintTop_toBottomOf="@+id/editText_clavelog" />
 
     <Button
         android:id="@+id/btn_registrarse"
