--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -8,12 +8,13 @@
     tools:context=".Registro">
 
     <RadioGroup
-        android:id="@+id/radioGroup"
+        android:id="@+id/btn_radioGroup"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="52dp"
+        android:checkedButton="@id/rb_hogar"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -21,7 +22,7 @@
             android:id="@+id/rb_hogar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:checked="true"
+            android:checked="false"
             android:text="Hogar" />
 
         <RadioButton
@@ -36,19 +37,19 @@
         android:id="@+id/editText_nombre"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="28dp"
         android:ems="10"
         android:hint="Nombre"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/radioGroup"
-        app:layout_constraintStart_toStartOf="@+id/radioGroup"
-        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
+        app:layout_constraintEnd_toEndOf="@+id/btn_radioGroup"
+        app:layout_constraintStart_toStartOf="@+id/btn_radioGroup"
+        app:layout_constraintTop_toBottomOf="@+id/btn_radioGroup" />
 
     <EditText
         android:id="@+id/editText_correo"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="20dp"
         android:ems="10"
         android:hint="Correo"
         android:inputType="textPersonName"
@@ -61,14 +62,13 @@
         android:id="@+id/editText_direccion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="32dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="Direccion"
         android:inputType="textPersonName"
-        app:layout_constraintEnd_toEndOf="@+id/editText_correo"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="@+id/editText_correo"
-        app:layout_constraintTop_toBottomOf="@+id/editText_correo" />
+        app:layout_constraintEnd_toEndOf="@+id/editText_clavereg"
+        app:layout_constraintStart_toStartOf="@+id/editText_clavereg"
+        app:layout_constraintTop_toBottomOf="@+id/editText_clavereg" />
 
     <EditText
         android:id="@+id/editText_ciudad"
@@ -83,7 +83,7 @@
         app:layout_constraintTop_toBottomOf="@+id/editText_direccion" />
 
     <Button
-        android:id="@+id/btn_acep"
+        android:id="@+id/btn_acept"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="60dp"
@@ -91,5 +91,17 @@
         app:layout_constraintEnd_toEndOf="@+id/editText_ciudad"
         app:layout_constraintStart_toStartOf="@+id/editText_ciudad"
         app:layout_constraintTop_toBottomOf="@+id/editText_ciudad" />
+
+    <EditText
+        android:id="@+id/editText_clavereg"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="28dp"
+        android:ems="10"
+        android:hint="Clave"
+        android:inputType="textPersonName"
+        app:layout_constraintEnd_toEndOf="@+id/editText_correo"
+        app:layout_constraintStart_toStartOf="@+id/editText_correo"
+        app:layout_constraintTop_toBottomOf="@+id/editText_correo" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
